--- a/api/api_sources/.build/Dockerfile.local
+++ b/api/api_sources/.build/Dockerfile.local
@@ -2,7 +2,7 @@ FROM node:10
 
 RUN apt-get update
 RUN apt-get install -y curl
-RUN npm install -g npm
+RUN npm install -g npm@6.14.12
 
 # Create app directory
 
