--- a/api/api_sources/package.json
+++ b/api/api_sources/package.json
@@ -1,114 +1,114 @@
 {
-    "name": "lucy",
-    "version": "1.0.0",
-    "description": "API service for Lucy app",
-    "main": "index.js",
-    "scripts": {
-        "build": "gulp",
-        "start": "npm run build && node dist-server/index.js",
-        "app": "ts-node sources",
-        "docker_start": "npm-run-all -p hotload watch",
-        "deploy_run": "npm run app",
-        "hotload": "npm run test:lint && npm run build && npm run migration && npm run seed-db && NODE_ENV=dev-docker ./node_modules/.bin/nodemon sources/index.ts --exec ts-node",
-        "watch": "gulp watch",
-        "test:all": "TEST_RUN=yes nyc ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --timeout 60000",
-        "git:run": "npm run migration && npm run seed-db && NODE_ENV=dev-docker ./node_modules/.bin/nodemon sources/index.ts --exec ts-node",
-        "migration": "ts-node scripts/run.migrations.ts",
-        "seed-db": "ts-node scripts/seed.data.ts",
-        "migration-refresh": "ts-node scripts/refresh-migration.ts",
-        "typeorm": "ts-node -r ./tsconfig.json/register ./node_modules/typeorm/cli.js",
-        "test": "ts-mocha --timeout 60000",
-        "ts-run": "ts-node",
-        "tslint": "tslint",
-        "test:lint": "tslint --project .",
-        "snyk-protect": "snyk protect",
-        "sonar-analysis": "sonar-scanner",
-        "remote:test": "npm run test:all && npm run sonar-analysis",
-        "remote:test-temp": "npm run test:all",
-        "test:no-server": "TEST_RUN=yes ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --exclude './sources/server/**/*.spec.ts' --timeout 8000",
-        "test:server": "ts-mocha --recursive --require source-map-support/register './sources/server/**/*.spec.ts' --timeout 8000",
-        "test:coverage": "TEST_RUN=yes nyc --reporter=lcov --report-dir=coverage/ ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --timeout 60000"
-    },
-    "author": "Pushan Mitra",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/bcgov/lucy-web.git"
-    },
-    "devDependencies": {
-        "@types/axios": "^0.14.0",
-        "@types/bcryptjs": "^2.4.2",
-        "@types/chai": "^4.1.7",
-        "@types/chalk": "^2.2.0",
-        "@types/cors": "^2.8.5",
-        "@types/csvtojson": "^1.1.5",
-        "@types/express": "^4.17.0",
-        "@types/express-validator": "^3.0.0",
-        "@types/faker": "^4.1.5",
-        "@types/form-data": "^2.5.0",
-        "@types/js-yaml": "^3.12.1",
-        "@types/jsonwebtoken": "^8.3.2",
-        "@types/minimist": "^1.2.0",
-        "@types/mocha": "^5.2.7",
-        "@types/moment": "^2.13.0",
-        "@types/mongoose": "^5.5.5",
-        "@types/multer": "^1.4.2",
-        "@types/node": "^11.13.13",
-        "@types/nodemailer": "^6.4.0",
-        "@types/passport": "^1.0.0",
-        "@types/passport-jwt": "^3.0.1",
-        "@types/supertest": "^2.0.7",
-        "@types/underscore": "^1.8.20",
-        "awesome-typescript-loader": "^3.4.1",
-        "del": "^3.0.0",
-        "faker": "^4.1.0",
-        "gulp": "^4.0.2",
-        "gulp-load-plugins": "^1.6.0",
-        "gulp-sourcemaps": "latest",
-        "gulp-typescript": "^5.0.1",
-        "gulp-util": "^3.0.8",
-        "nodemon": "^1.19.1",
-        "nyc": "^14.1.1",
-        "sonarqube-scanner": "^2.5.0",
-        "source-map-support": "^0.5.12",
-        "supertest": "^4.0.2",
-        "ts-mocha": "^6.0.0",
-        "ts-node": "^8.3.0",
-        "tslint": "^5.18.0",
-        "typescript": "^2.6.2"
-    },
-    "dependencies": {
-        "@bcgov/nodejs-common-utils": "0.0.16",
-        "axios": "^0.21.1",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "chai": "^4.2.0",
-        "chalk": "^2.4.2",
-        "cors": "^2.8.5",
-        "csvtojson": "^2.0.8",
-        "express": "^4.17.1",
-        "express-validator": "^6.1.1",
-        "form-data": "^3.0.0",
-        "js-yaml": "^3.13.1",
-        "jsonwebtoken": "^8.5.1",
-        "jwt-decode": "^2.2.0",
-        "knex": "^0.21.4",
-        "minimist": "^1.2.3",
-        "mocha": "^5.2.0",
-        "moment": "^2.24.0",
-        "multer": "^1.4.2",
-        "nodemailer": "^5.1.1",
-        "passport": "^0.4.0",
-        "passport-jwt": "^4.0.0",
-        "passport-mock-strategy": "^2.0.0",
-        "pg": "^7.11.0",
-        "q": "^1.5.1",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^6.5.2",
-        "snyk": "^1.192.5",
-        "source-map-loader": "^0.2.4",
-        "typeorm": "^0.2.18",
-        "underscore": "^1.9.1"
-    },
-    "snyk": true
+  "name": "lucy",
+  "version": "1.0.0",
+  "description": "API service for Lucy app",
+  "main": "index.js",
+  "scripts": {
+    "build": "gulp",
+    "start": "npm run build && node dist-server/index.js",
+    "app": "ts-node sources --max_old_space_size=8128",
+    "docker_start": "npm-run-all -p hotload watch",
+    "deploy_run": "npm run app",
+    "hotload": "npm run test:lint && npm run build && npm run migration && npm run seed-db && NODE_ENV=dev-docker ./node_modules/.bin/nodemon sources/index.ts --exec ts-node",
+    "watch": "gulp watch",
+    "test:all": "TEST_RUN=yes nyc ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --timeout 60000",
+    "git:run": "npm run migration && npm run seed-db && NODE_ENV=dev-docker ./node_modules/.bin/nodemon sources/index.ts --exec ts-node",
+    "migration": "ts-node scripts/run.migrations.ts",
+    "seed-db": "ts-node scripts/seed.data.ts",
+    "migration-refresh": "ts-node scripts/refresh-migration.ts",
+    "typeorm": "ts-node -r ./tsconfig.json/register ./node_modules/typeorm/cli.js",
+    "test": "ts-mocha --timeout 60000",
+    "ts-run": "ts-node",
+    "tslint": "tslint",
+    "test:lint": "tslint --project .",
+    "snyk-protect": "snyk protect",
+    "sonar-analysis": "sonar-scanner",
+    "remote:test": "npm run test:all && npm run sonar-analysis",
+    "remote:test-temp": "npm run test:all",
+    "test:no-server": "TEST_RUN=yes ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --exclude './sources/server/**/*.spec.ts' --timeout 8000",
+    "test:server": "ts-mocha --recursive --require source-map-support/register './sources/server/**/*.spec.ts' --timeout 8000",
+    "test:coverage": "TEST_RUN=yes nyc --reporter=lcov --report-dir=coverage/ ts-mocha --recursive --require source-map-support/register './sources/**/*.spec.ts' --timeout 60000"
+  },
+  "author": "Pushan Mitra",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bcgov/lucy-web.git"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/chai": "^4.1.7",
+    "@types/chalk": "^2.2.0",
+    "@types/cors": "^2.8.5",
+    "@types/csvtojson": "^1.1.5",
+    "@types/express": "^4.17.0",
+    "@types/express-validator": "^3.0.0",
+    "@types/faker": "^4.1.5",
+    "@types/form-data": "^2.5.0",
+    "@types/js-yaml": "^3.12.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/minimist": "^1.2.0",
+    "@types/mocha": "^5.2.7",
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.5.5",
+    "@types/multer": "^1.4.2",
+    "@types/node": "^11.13.13",
+    "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
+    "@types/supertest": "^2.0.7",
+    "@types/underscore": "^1.8.20",
+    "awesome-typescript-loader": "^3.4.1",
+    "del": "^3.0.0",
+    "faker": "^4.1.0",
+    "gulp": "^4.0.2",
+    "gulp-load-plugins": "^1.6.0",
+    "gulp-sourcemaps": "latest",
+    "gulp-typescript": "^5.0.1",
+    "gulp-util": "^3.0.8",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
+    "sonarqube-scanner": "^2.5.0",
+    "source-map-support": "^0.5.12",
+    "supertest": "^4.0.2",
+    "ts-mocha": "^6.0.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^2.6.2"
+  },
+  "dependencies": {
+    "@bcgov/nodejs-common-utils": "0.0.16",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chalk": "^2.4.2",
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.8",
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
+    "form-data": "^3.0.0",
+    "js-yaml": "^3.13.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "knex": "^0.21.4",
+    "minimist": "^1.2.3",
+    "mocha": "^5.2.0",
+    "moment": "^2.24.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^5.1.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-mock-strategy": "^2.0.0",
+    "pg": "^7.11.0",
+    "q": "^1.5.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.2",
+    "snyk": "^1.192.5",
+    "source-map-loader": "^0.2.4",
+    "typeorm": "^0.2.18",
+    "underscore": "^1.9.1"
+  },
+  "snyk": true
 }
