allow for deployments on push as well as pr

--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - dev
       - prod
+  push:
+    branches:
+      - dev
+      - prod
 
 jobs:
   # Print variables for logging and debugging purposes
