--- a/api/openshift/db.bc.yaml
+++ b/api/openshift/db.bc.yaml
@@ -1,6 +1,6 @@
 ---
 kind: Template
-apiVersion: build.openshift.io/v1
+apiVersion: template.openshift.io/v1
 metadata:
   name: postgresql
   creationTimestamp: null
