update yaml files for oc

--- a/api/openshift/api.bc.yaml
+++ b/api/openshift/api.bc.yaml
@@ -3,14 +3,14 @@ kind: Template
 metadata:
   creationTimestamp: null
   labels:
-    build: invasivebc-api
-  name: invasivebc-api
+    build: invasivesbc-api
+  name: invasivesbc-api
 parameters:
 - name: NAME
   displayName: Name
   description: A suffix appended to all objects
   required: true
-  value: invasivebc-api
+  value: invasivesbc-api
 - name: SUFFIX
   displayName: Name Suffix
   description: A suffix appended to all objects
