--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.merged == true}}
     env:
-      BUILD_ID: 1054
+      BUILD_ID: ${{ github.event.number }}
     steps:
       # Checkout the PR branch
       - name: Checkout Target Branch
@@ -95,7 +95,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.merged == true && github.base_ref != 'prod'}}
     env:
-      BUILD_ID: 1054
+      BUILD_ID: ${{ github.event.number }}
     needs:
       - buildAPI
       - buildAPP
@@ -121,11 +121,11 @@ jobs:
         working-directory: "./api/.pipeline/"
         run: |
           npm ci
-          DEBUG=* npm run pre-deploy -- --pr=$BUILD_ID --env=dev --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run setup -- --pr=$BUILD_ID --env=dev --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run seed -- --pr=$BUILD_ID --env=dev --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy-tools -- --pr=$BUILD_ID --env=dev --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run pre-deploy -- --pr=1054 --env=dev --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run setup -- --pr=1054 --env=dev --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run seed -- --pr=1054 --env=dev --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy -- --pr=1054 --env=dev --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy-tools -- --pr=1054 --env=dev --type=static --branch=${{ github.base_ref }}
 
       # Deploy the app
       - name: Deploy App
@@ -140,7 +140,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.merged == true && github.base_ref != 'prod'}}
     env:
-      BUILD_ID: 1054
+      BUILD_ID: ${{ github.event.number }}
     needs:
       - buildAPI
       - buildAPP
@@ -166,11 +166,11 @@ jobs:
         working-directory: "./api/.pipeline/"
         run: |
           npm ci
-          DEBUG=* npm run pre-deploy -- --pr=$BUILD_ID --env=test --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run setup -- --pr=$BUILD_ID --env=test --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run seed -- --pr=$BUILD_ID --env=test --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=test --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy-tools -- --pr=$BUILD_ID --env=test --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run pre-deploy -- --pr=1054 --env=test --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run setup -- --pr=1054 --env=test --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run seed -- --pr=1054 --env=test --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy -- --pr=1054 --env=test --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy-tools -- --pr=1054 --env=test --type=static --branch=${{ github.base_ref }}
 
       # Deploy the app
       - name: Deploy App
@@ -185,7 +185,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.merged == true && github.base_ref == 'prod'}}
     env:
-      BUILD_ID: 1054
+      BUILD_ID: ${{ github.event.number }}
     needs:
       - buildAPI
       - buildAPP
@@ -211,10 +211,10 @@ jobs:
         working-directory: "./api/.pipeline/"
         run: |
           npm ci
-          DEBUG=* npm run pre-deploy -- --pr=$BUILD_ID --env=prod --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run setup -- --pr=$BUILD_ID --env=prod --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=prod --type=static --branch=${{ github.base_ref }}
-          DEBUG=* npm run deploy-tools -- --pr=$BUILD_ID --env=prod --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run pre-deploy -- --pr=1054 --env=prod --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run setup -- --pr=1054 --env=prod --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy -- --pr=1054 --env=prod --type=static --branch=${{ github.base_ref }}
+          DEBUG=* npm run deploy-tools -- --pr=1054 --env=prod --type=static --branch=${{ github.base_ref }}
 
       # Deploy the app
       - name: Deploy App
