--- a/loadTest/app/env.example
+++ b/loadTest/app/env.example
@@ -2,6 +2,6 @@
 TEST_USER=#NAME
 PASSWORD=#PWD
 # Keycloak auth details 
-AUTH_URL=https://dev.oidc.gov.bc.ca/auth/realms
-REALM=dfmlcg7z
-CLIENT_ID=invasives-bc
+AUTH_URL=https://loginproxy.gov.bc.ca/auth/realms
+REALM=standard
+CLIENT_ID=inspect-bc-mussels-4817
