--- a/.config/config.json
+++ b/.config/config.json
@@ -32,17 +32,17 @@
     },
     "sso": {
         "dev": {
-            "url": "https://dev.loginproxy.gov.bc.ca/auth",
+            "url": "https://dev.loginproxy.gov.bc.ca",
             "clientId": "inspect-bc-mussels-4817",
             "realm": "standard"
         },
         "test": {
-            "url": "https://test.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+            "url": "https://test.loginproxy.gov.bc.ca",
             "clientId": "inspect-bc-mussels-4817",
             "realm": "standard"
         },
         "prod": {
-            "url": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+            "url": "https://loginproxy.gov.bc.ca",
             "clientId": "inspect-bc-mussels-4817",
             "realm": "standard"
         }
