--- a/.config/config.json
+++ b/.config/config.json
@@ -26,25 +26,25 @@
         "prod": "api-invasivesbc.apps.silver.devops.gov.bc.ca"
     },
     "certificateURL": {
-        "dev": "https://dev.oidc.gov.bc.ca/auth/realms/dfmlcg7z/protocol/openid-connect/certs",
-        "test": "https://test.oidc.gov.bc.ca/auth/realms/dfmlcg7z/protocol/openid-connect/certs",
-        "prod": "https://oidc.gov.bc.ca/auth/realms/dfmlcg7z/protocol/openid-connect/certs"
+        "dev": "https://dev.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+        "test": "https://test.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+        "prod": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs"
     },
     "sso": {
         "dev": {
-            "url": "https://dev.oidc.gov.bc.ca",
-            "clientId": "invasives-bc",
-            "realm": "dfmlcg7z"
+            "url": "https://dev.loginproxy.gov.bc.ca",
+            "clientId": "inspect-bc-mussels-4817",
+            "realm": "standard"
         },
         "test": {
-            "url": "https://test.oidc.gov.bc.ca",
-            "clientId": "invasives-bc",
-            "realm": "dfmlcg7z"
+            "url": "https://test.loginproxy.gov.bc.ca",
+            "clientId": "inspect-bc-mussels-4817",
+            "realm": "standard"
         },
         "prod": {
-            "url": "https://oidc.gov.bc.ca",
-            "clientId": "invasives-bc",
-            "realm": "dfmlcg7z"
+            "url": "https://loginproxy.gov.bc.ca",
+            "clientId": "inspect-bc-mussels-4817",
+            "realm": "standard"
         }
     },
     "migrationInfo" : {
