--- a/app/openshift/app.dc.yaml
+++ b/app/openshift/app.dc.yaml
@@ -233,7 +233,7 @@ parameters:
   value: '2Gi'
 - name: SSO_URL
   description: Key clock login url
-  value: 'https://loginproxy.gov.bc'
+  value: 'https://loginproxy.gov.bc.ca'
 - name: SSO_CLIENT_ID
   description: Client Id for application
   value: "inspect-bc-mussels-4817"
