--- a/.config/config.json
+++ b/.config/config.json
@@ -26,18 +26,20 @@
         "prod": "api-invasivesbc.apps.silver.devops.gov.bc.ca"
     },
     "certificateURL": {
-        "dev": "https://dev.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
-        "test": "https://test.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+        "dev": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+        "test": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
         "prod": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs"
     },
     "sso": {
         "dev": {
-            "url": "https://dev.loginproxy.gov.bc.ca",
+            "url": "https://loginproxy.gov.bc.ca",
+
             "clientId": "inspect-bc-mussels-4817",
             "realm": "standard"
         },
         "test": {
-            "url": "https://test.loginproxy.gov.bc.ca",
+            "url": "https://loginproxy.gov.bc.ca",
+
             "clientId": "inspect-bc-mussels-4817",
             "realm": "standard"
         },
