--- a/api/api_sources/tsconfig.json
+++ b/api/api_sources/tsconfig.json
@@ -40,6 +40,7 @@
     "./node_modules/@types/mocha/index.d.ts",
     "./node_modules/@types/node/index.d.ts",
     "./node_modules/@types/jest/index.d.ts",
-    "./typings-custom/@bcgov/nodejs-common-utils.d.ts"
+    "./typings-custom/@bcgov/nodejs-common-utils.d.ts",
+    "./typings-custom/rsa-pem-from-mod-exp.d.ts"
   ]
 }
