--- a/.config/config.json
+++ b/.config/config.json
@@ -26,7 +26,7 @@
         "prod": "api-invasivesbc.apps.silver.devops.gov.bc.ca"
     },
     "certificateURL": {
-        "dev": "https://devloginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
+        "dev": "https://dev.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
         "test": "https://test.loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs",
         "prod": "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs"
     },
