--- a/api/api_sources/.build/Dockerfile.npm
+++ b/api/api_sources/.build/Dockerfile.npm
@@ -1,5 +1,6 @@
 FROM node:10
 
+RUN echo "deb http://archive.debian.org/debian stretch main" > /etc/apt/sources.list
 RUN apt-get update
 RUN npm install -g npm@6.14.12
 
