--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       - 3030:3030
     networks:
       - web-net
+    volumes:
+      - ./lucy:/opt/app-root/src
 networks:
   web-net:
     driver: bridge
     name: lucy-web-network
-  
