--- a/app/lucy/Dockerfile
+++ b/app/lucy/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:10
+FROM node:14.21.3
 
 # Setting Path
 ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:/opt/app-root/src/node_modules/.bin/:/opt/app-root/src/app.npm-global/bin/:/opt/app-root/src/app/bin:/opt/app-root/src/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
@@ -36,4 +36,4 @@ RUN npm run build-prod
 EXPOSE 3030
 
 # RUN APP
-CMD ["npm", "run", "deploy_start"]
+CMD ["npm", "run", "deploy_run"]
