--- a/app/lucy/package.json
+++ b/app/lucy/package.json
@@ -58,6 +58,7 @@
         "popper.js": "^1.15.0",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
+        "sass": "1.69.7",
         "terser-webpack-plugin": "^2.1.0",
         "tslib": "^1.9.0",
         "web-animations-js": "^2.3.2",
