[FIX][LUCY-188] - Fix to Admin, allow access to INSPECT Web (#1162)
* add hot-reloading; update node image to fix node-sass errors

* fix local target; add PKCE validation

* Update dockercompose / packages

* fix legacy typo

* Update app/lucy/src/app/services/sso.service.ts

Co-authored-by: Matthew Logan <62873746+LocalNewsTV@users.noreply.github.com>

---------

Co-authored-by: LocalNewsTV <62873746+LocalNewsTV@users.noreply.github.com>

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     container_name: "lucy-web"
     build:
       context: ./lucy
-      dockerfile: .build/Dockerfile.local
+      dockerfile: Dockerfile
     ports:
       - 3030:3030
     networks:
       - web-net
+    volumes:
+      - ./lucy:/opt/app-root/src
 networks:
   web-net:
     driver: bridge
     name: lucy-web-network
-  
