--- a/app/lucy/package.json
+++ b/app/lucy/package.json
@@ -10,7 +10,7 @@
         "test": "ng test --watch=false",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "deploy_run": "ng serve --host 0.0.0.0 --port 3030 --disableHostCheck",
+        "deploy_run": "ng serve --poll 2000 --host 0.0.0.0 --port 3030 --disable-host-check",
         "deploy_start": "node server",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
@@ -58,7 +58,7 @@
         "popper.js": "^1.15.0",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
-        "terser-webpack-plugin": "^2.1.0",
+        "sass": "1.69.7",
         "tslib": "^1.9.0",
         "web-animations-js": "^2.3.2",
         "webpack": "^4.40.2",
