--- a/app/openshift/app.bc.yaml
+++ b/app/openshift/app.bc.yaml
@@ -30,13 +30,13 @@ parameters:
   value: dev
 - name: SOURCE_IMAGE_NAME
   required: true
-  value: redhat-ubi-node-10
+  value: node
 - name: SOURCE_IMAGE_TAG
   required: true
-  value: 1-41
+  value: 14.21.3
 - name: BASE_IMAGE_URL
   required: true
-  value: registry.access.redhat.com/ubi8/nodejs-10:1-41
+  value: node:14.21.3
 objects:
 - kind: ImageStream
   apiVersion: v1
